--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -113,6 +113,8 @@ button:focus
         color: #FFF
     &:focus
         color: #383838
+    &.is-invalid
+        background-color: $form-background
 
 option:disabled
     color: #c2c2c2
