--- a/src/assets/css/editProfile.css
+++ b/src/assets/css/editProfile.css
@@ -8,7 +8,7 @@ h2 {
 
 .editProfile_header--background {
   background-color: #00554c;
-  widht: 100%;
+  width: 100%;
   height: 147px;
 }
 /*# sourceMappingURL=editProfile.css.map */
