Added profile description and styling for it Added profile family component and styling for it Changed styling in profile header

--- a/src/assets/css/_variables.sass
+++ b/src/assets/css/_variables.sass
@@ -3,6 +3,9 @@
 $tassa-orange: #F4976C
 $tassa-red: #b23850
 $tassa-green: #003D37
+$tassa-green-lighter: #004942
+$tassa-offwhite: #e6e6e6
+$tassa-gray: #adadad
 $icon-color: #fffdf7
 $form-background: rgba(255, 255, 255, 0.247)
 
