--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -11,7 +11,7 @@ $theme-colors: ("tassabtnred": #B23850)
     padding-bottom: 0 !important
 
 @import "../../../node_modules/bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,300&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@600&display=swap');
 
 // Variables and mixins
@@ -38,6 +38,14 @@ h3, h4, h5
 h3
     @include sub-title
 
+h4
+    font-size: 1.9em
+
+h5
+    font-weight: 600
+    letter-spacing: 0.1em
+    font-size: 1.5em
+
 h6
     font-family: $normal-font
     font-size: 1em
@@ -55,6 +63,10 @@ p, a, label, span
     color: white
     padding-bottom: 0
 
+p
+    line-height: 1.7em
+    color: $tassa-offwhite
+
 a:hover
     color: darken(white, 15%)
     text-decoration: none   
@@ -65,6 +77,17 @@ a:hover
     font-size: 1.4em
     text-transform: uppercase
     color: white
+
+.subtitle-extended
+    font-family: $normal-font
+    font-weight: 600
+    color: $tassa-gray
+    text-transform: uppercase
+    letter-spacing: 0.18em
+    font-size: 0.9em
+
+.dog-name
+    font-size: 1.2em
 
 // Backgrounds
 
@@ -190,7 +213,14 @@ select option
 .profile--container
     margin: 0
     padding: 0
-
-.profile-header--container, .profile-family--container
     @include no-x-scroll
+
+.profile-header--container, .profile-family--container, .profile-desc--container
+    padding: 2em 1em 1em 1em
+
+.profile-family--container
+    background-color: $tassa-green-lighter
+
+.profile-desc--container
+    margin-bottom: $clear-navbar
     
