Changed all font related sizes to rem from em

--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -11009,36 +11009,36 @@ h3 {
 }
 
 h4 {
-  font-size: 1.9em;
+  font-size: 1.9rem;
 }
 
 h5 {
   font-weight: 600;
-  letter-spacing: 0.1em;
-  font-size: 1.5em;
+  letter-spacing: 0.1rem;
+  font-size: 1.5rem;
 }
 
 h6 {
   font-family: "Open Sans", sans-serif;
-  font-size: 1em;
+  font-size: 1rem;
   color: white;
-  line-height: 2em;
-  letter-spacing: 0.08em;
+  line-height: 2rem;
+  letter-spacing: 0.08rem;
   text-transform: uppercase;
 }
 
 p, a, label, span {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
-  line-height: 1.5em;
-  font-size: 1em;
+  line-height: 1.5rem;
+  font-size: 1rem;
   text-decoration: none;
   color: white;
   padding-bottom: 0;
 }
 
 p {
-  line-height: 1.7em;
+  line-height: 1.7rem;
   color: #e6e6e6;
 }
 
@@ -11050,7 +11050,7 @@ a:hover {
 .logo--text {
   font-family: "Exo", sans-serif;
   font-weight: 600;
-  font-size: 1.4em;
+  font-size: 1.4rem;
   text-transform: uppercase;
   color: white;
 }
@@ -11060,12 +11060,12 @@ a:hover {
   font-weight: 600;
   color: #adadad;
   text-transform: uppercase;
-  letter-spacing: 0.18em;
-  font-size: 0.9em;
+  letter-spacing: 0.18rem;
+  font-size: 0.9rem;
 }
 
 .dog-name {
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 body {
