--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -39,32 +39,32 @@ h3
     @include sub-title
 
 h4
-    font-size: 1.9em
+    font-size: 1.9rem
 
 h5
     font-weight: 600
-    letter-spacing: 0.1em
-    font-size: 1.5em
+    letter-spacing: 0.1rem
+    font-size: 1.5rem
 
 h6
     font-family: $normal-font
-    font-size: 1em
+    font-size: 1rem
     color: white
-    line-height: 2em
-    letter-spacing: 0.08em
+    line-height: 2rem
+    letter-spacing: 0.08rem
     text-transform: uppercase
 
 p, a, label, span
     font-family: $normal-font
     font-weight: 400
-    line-height: 1.5em
-    font-size: 1em
+    line-height: 1.5rem
+    font-size: 1rem
     text-decoration: none
     color: white
     padding-bottom: 0
 
 p
-    line-height: 1.7em
+    line-height: 1.7rem
     color: $tassa-offwhite
 
 a:hover
@@ -74,7 +74,7 @@ a:hover
 .logo--text
     font-family: $logo-font
     font-weight: 600
-    font-size: 1.4em
+    font-size: 1.4rem
     text-transform: uppercase
     color: white
 
@@ -83,11 +83,11 @@ a:hover
     font-weight: 600
     color: $tassa-gray
     text-transform: uppercase
-    letter-spacing: 0.18em
-    font-size: 0.9em
+    letter-spacing: 0.18rem
+    font-size: 0.9rem
 
 .dog-name
-    font-size: 1.2em
+    font-size: 1.2rem
 
 // Backgrounds
 
