--- a/src/assets/css/editPersonal.css
+++ b/src/assets/css/editPersonal.css
@@ -1,15 +1,26 @@
 .editPersonal_changeLabel {
-  text-align: left;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  margin-left: 4%;
+  color: white;
+    padding-top: 8%;
+    text-align: left;
 }
-
+.editLable {
+    font-size: 1rem;
+    color: white;
+    justify-self: left;
+    padding-top: 3%;
+}
 .editPersonal_changeInput {
-  padding-bottom: 3%;
+  padding-bottom: 2%;
   width: 100%;
   background-color: #006C61;
   border-radius: 20px 20px 20px 20px;
+}
+.btn{
+    border-radius: 20px 20px 20px 20px;
+}
+.my-4{
+    padding-top: 3%;
+padding-bottom: 4.2%;
 }
 
 input::-webkit-input-placeholder {
