Moved button and spinner classes from component to mainstyles Changed RegisterUserForm to be better compatible with API-calls Removed prop in RegisterUser-view

--- a/src/assets/css/mainstyles.css
+++ b/src/assets/css/mainstyles.css
@@ -11252,4 +11252,12 @@ select option {
 .profile-desc--container {
   margin-bottom: 15vh;
 }
+
+.alert {
+  margin: 1em 0;
+}
+
+.spinner-border {
+  margin-right: 1em;
+}
 /*# sourceMappingURL=mainstyles.css.map */
