--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -223,4 +223,10 @@ select option
 
 .profile-desc--container
     margin-bottom: $clear-navbar
-    
+
+
+// Button and spinners
+.alert 
+	margin: 1em 0
+.spinner-border 
+	margin-right: 1em
