--- a/src/assets/css/matchingPage.sass
+++ b/src/assets/css/matchingPage.sass
@@ -2,7 +2,7 @@
     
 .B-C 
 
-.B-C-A 
+.B-C-A:nth-child(2)
     background-color: #00554c
 
 .B-C > span,
@@ -21,3 +21,4 @@
     color: white
     margin-top: 5%
     text-align: left
+
