--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -221,7 +221,7 @@ select option
 .profile-family--container
     background-color: $tassa-green-lighter
 
-.profile-desc--container
+.profile-desc--container, .edit-presentation--container
     margin-bottom: $clear-navbar
 
 
