--- a/src/assets/css/editPersonal.css
+++ b/src/assets/css/editPersonal.css
@@ -1,31 +1,16 @@
 .editPersonal_changeLabel {
-  color: white;
-    padding-top: 8%;
-    text-align: left;
+  text-align: left;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin-left: 4%;
 }
-.editLable {
-    font-size: 0.855em;
-    color: white;
-    float: left;
-    padding-top: 2%;
-}
+
 .editPersonal_changeInput {
-  padding-bottom: 2%;
+  padding-bottom: 3%;
   width: 100%;
   background-color: #006C61;
   border-radius: 20px 20px 20px 20px;
 }
-.btn{
-    border-radius: 20px 20px 20px 20px;
-    width: 100%;
-}
-.btn-changeData{
-  color: white;
-   background-color: #B23850;
-   width: 50%;
-}
-
-
 
 input::-webkit-input-placeholder {
   color: white;
