added icon in layout

--- a/src/assets/css/matchingPage.css
+++ b/src/assets/css/matchingPage.css
@@ -32,4 +32,9 @@
   color: white;
   float: left;
 }
+.matchPicture{
+ margin-top: 15%;
+  height: 40px;
+  width: 40px;
+}
 /*# sourceMappingURL=matchingPage.css.map */
