--- a/src/assets/css/editProfile.css
+++ b/src/assets/css/editProfile.css
@@ -8,7 +8,67 @@ h2 {
 
 .editProfile_header--background {
   background-color: #00554c;
-  widht: 100%;
-  height: 147px;
+  width: 100%;
+  height: 1px;
 }
+.editProfile_change-HeaderSecond {
+  padding-top: 2rem;
+  padding-left: 4%;
+}
+.editProfile_change-Header {
+  font-size: clamp(1.4rem, 3vw, 1.6rem);
+  color: white;
+  padding-top: 2rem;
+}
+.editProfile_change-location {
+  font-size: clamp(1.2rem, 3vw, 1.6rem);
+  color: white;
+}
+.editProfile_change-picture {
+  width: 60%;
+  height: 140%;
+  border-radius: 100%;
+  background-color: violet;
+  margin-top: 10%;
+}
+.information_gender {
+  margin-top: 1.5%;
+}
+
+.editProfile_changePresentation-Header {
+  color: white;
+  margin-top: 1.5%;
+  text-align: left;
+  margin-left: 3.7%;
+}
+.editProfile_changePresentation-text {
+  color: white;
+  margin-top: 1.5%;
+  text-align: left;
+}
+
+.editProfile_changePresentation-last {
+  margin-top: 1%;
+  margin-left: 1.4%;
+}
+.editProfile_changePresentation-text-last_text {
+  color: white;
+  margin-left: 0.5%;
+  margin-top: 0.6%;
+}
+
+.information_container {
+  margin-top: 2%;
+  padding-left: 1.3%;
+}
+
+button {
+  color: white;
+  background-color: #b23850;
+  width: 110%;
+  height: 95%;
+  font-size: 14px;
+  border-radius: 15px 15px 15px 15px;
+}
+
 /*# sourceMappingURL=editProfile.css.map */
