--- a/src/assets/css/editPersonal.css
+++ b/src/assets/css/editPersonal.css
@@ -1,3 +1,8 @@
+.container {
+  padding: 0px !important;
+  margin: 0% !important;
+}
+
 .editPersonal_changeLabel {
   text-align: left;
   padding-top: 3%;
