--- a/src/assets/css/editProfile.css
+++ b/src/assets/css/editProfile.css
@@ -5,14 +5,19 @@ h1 {
 h2 {
   color: white;
 }
+.container {
+  padding: 0px !important;
+  margin: 0% !important;
+}
 
 .editProfile_header--background {
   background-color: #00554c;
   width: 100%;
   height: 1px;
+  padding: 10%;
 }
 .editProfile_change-HeaderSecond {
-  padding-top: 2rem;
+
   padding-left: 4%;
 }
 .editProfile_change-Header {
@@ -20,55 +25,61 @@ h2 {
   color: white;
   padding-top: 2rem;
 }
-.editProfile_change-location {
-  font-size: clamp(1.2rem, 3vw, 1.6rem);
-  color: white;
-}
-.editProfile_change-picture {
-  width: 60%;
-  height: 140%;
-  border-radius: 100%;
-  background-color: violet;
-  margin-top: 10%;
-}
 .information_gender {
   margin-top: 1.5%;
-}
-
-.editProfile_changePresentation-Header {
-  color: white;
-  margin-top: 1.5%;
+  padding-left: 0%;
+  width: 100%;
   text-align: left;
-  margin-left: 3.7%;
+}
+.information_dog{
+  margin-top: 1.5%;
+  padding-left:0%;
+  width: 100%;
+  color: white;
+  text-align: left;
+}
+.information_size{
+  width: 95%;
+  text-align: left;
+}
+.editProfile_changePresentation-Header {
+ 
+  margin-top: 1.5%;
+  
+  padding-left: 7%;
+  text-transform: none;
+  
 }
 .editProfile_changePresentation-text {
   color: white;
   margin-top: 1.5%;
   text-align: left;
+  padding-left: 7%;
 }
 
 .editProfile_changePresentation-last {
   margin-top: 1%;
-  margin-left: 1.4%;
+  padding-left: 7%;
 }
 .editProfile_changePresentation-text-last_text {
   color: white;
-  margin-left: 0.5%;
+  padding-left: 0.8%;
   margin-top: 0.6%;
 }
 
 .information_container {
   margin-top: 2%;
-  padding-left: 1.3%;
+  padding-left: 2%;
 }
 
-button {
+.editProfile-button {
   color: white;
   background-color: #b23850;
-  width: 110%;
+  width: 100%;
   height: 95%;
   font-size: 14px;
   border-radius: 15px 15px 15px 15px;
+  padding-left: 11%;
 }
 
 /*# sourceMappingURL=editProfile.css.map */
