--- a/src/assets/css/mainstyles.sass
+++ b/src/assets/css/mainstyles.sass
@@ -193,6 +193,7 @@ select option
     font-weight: 600
     letter-spacing: 0.1em
     margin-top: 2em
+    visibility: hidden
 
 .btn-outline-startpagebtn
     border-color: #fff
