--- a/src/assets/css/editPersonal.css
+++ b/src/assets/css/editPersonal.css
@@ -30,8 +30,8 @@ padding-left: 17%;
   border-radius: 20px 20px 20px 20px;
 }
 .my-3{
-  padding-right: 4%;
-  padding-bottom: 2%;
+ width: 100%;
+ height: 40%;
 }
 
 input::-webkit-input-placeholder {
@@ -57,19 +57,16 @@ input::placeholder {
 }
  .btn-success, .btn-danger{
   border-radius: 20px 20px 20px 20px;
+  justify-self: end;
+display: flex;
+padding-left: 10%;
+
 }
 .profile-header--btn {
   visibility: hidden;
 }
 
-.navbar-collapse, .collapse, .show{
-  padding-right: 3%;
-  padding-bottom: 8%;
-  
-}
-.navbar-toggler, .not-collapsed{
-  padding-right:6%;
-}
+
 
 
 /*# sourceMappingURL=editPersonal.css.map */
