--- a/src/assets/css/editProfile.css
+++ b/src/assets/css/editProfile.css
@@ -8,61 +8,54 @@ h2 {
 .container {
   padding: 0px !important;
   margin: 0% !important;
-}
-
-.editProfile_header--background {
   background-color: #00554c;
-  width: 100%;
   height: 1px;
-  padding: 10%;
-}
-.editProfile_changePresentation {
-  color: white;
-  padding-left: 12%;
-}
-.information_gender, .information_dog {
-  margin-top: 1.5%;
-  padding-left: 0%;
-  width: 100%;
-  text-align: left;
-}
-.information_size{
-  width: 95%;
-  text-align: left;
-}
-.editProfile_changePresentation-Header {
-  margin-top: 1.5%;
-  padding-left: 7%;
-  text-transform: none;
-  
-}
-.editProfile_changePresentation-text {
-  color: white;
-  margin-top: 1.5%;
-  text-align: left;
-  padding-left: 7%;
 }
 
-
-.editProfile_changePresentation-text-last_text {
-  color: white;
-  padding-left: 0.8%;
-  margin-top: 0.6%;
-}
-
-.information_container {
-  margin-top: 2%;
-  padding-left: 2%;
-}
 
 .editProfile-button {
   color: white;
   background-color: #b23850;
-  width: 90%;
-  height: 95%;
-  font-size: 14px;
-  border-radius: 15px 15px 15px 15px;
-  padding-left: 11%;
+  width: 65px;
+  height: 37px;
+  font-size: 18px;
+  border-radius: 11px 11px 11px 11px;
+  display: flex;
+  position: relative;
+  z-index: 100;
+  top: 30px;
+  left: 270px;
+}
+.editProfile_changePresentation {
+text-align: left;
+margin-left: 7%;
+}
+.editProfile_changePresentation-text {
+  color: white;
+  margin-left: 5%;
+  text-align: left;
+  padding-top: 5px;
+}
+.information_gender, .information_dog, .information_size {
+  margin-top: 2px;
+  margin-left: 2%;
+  width: 300px;
+  text-align: left;
+}
+.information_changePresentationGender {
+  display: flex;
+  flex-flow: row wrap;
+  margin-left: 4%;
+  padding-top: 6px;
+}
+
+.editProfile_changePresentation-Header {
+  padding-top: 10px;
+  margin-left: 7%;
+  text-transform: none; 
+}
+.last{
+  width: 100%;
 }
 .profile-header--btn {
   visibility: hidden;
